# istiaENGRAIS

./: .gitignore  README.md  engrais.rviz  simulate.sh
config/: config.sh
engrais/: CMakeLists.txt  controller_move.py  package.xml  robot_controller_move.py  robot_keyboard_move.cpp
engrais/launch/: control.launch  controller_move.launch  findlines.launch  keyboard_move.launch  motors.launch  outdate_keyboard_move.launch  outdate_system.launch  rasp1.launch  rasp2.launch  rasp3.launch  simulation.launch  system.launch  system_controller.launch  system_keyboard.launch
engrais_control/: CMakeLists.txt  package.xml  robot_control.cpp  robot_filter.cpp  robot_findlines.cpp  robot_get_pose.cpp  robot_keyboard_control.cpp  robot_keyboard_move.cpp  robot_move.cpp  sensor_capture.cpp  teste.cpp  testing.cpp
engrais_control/config/: engrais_control.yaml
engrais_control/launch/: central.launch  control.launch  engrais_control.launch  findlines.launch  keyboard_move.launch  move.launch  rasp.launch  rasp1.launch  rasp2.launch  rasp3.launch  rasp4.launch  simulation.launch  spawn_model.launch  system.launch
engrais_control/msg/: Results.msg
engrais_control/src/: Model.cpp  Model.h  Pearl.cpp  Pearl.h  Point.h  Ruby.cpp  Ruby.h  Utility.cpp  Utility.h  WeightedPoint.cpp  WeightedPoint.h
engrais_control/src/.fuzzylite-6.0/fuzzylite-6.0/QtFuzzyLite/: AppRun  LICENSE.QtFuzzyLite.txt
engrais_control/src/.fuzzylite-6.0/fuzzylite-6.0/QtFuzzyLite/LICENSE/: LICENSE.FuzzyLite.txt  LICENSE.QtFuzzyLite  LICENSE.zlib.txt
engrais_control/src/10_RobotControl/: RobotControl.cpp  RobotControl.h
engrais_control/src/1_Point/: Point.h
engrais_control/src/2_WeightedPoint/: WeightedPoint.cpp  WeightedPoint.h
engrais_control/src/3_Utility/: Utility.cpp  Utility.h
engrais_control/src/4_Model/: Model.cpp  Model.h
engrais_control/src/5_Pearl/: Pearl.cpp  Pearl.h
engrais_control/src/6_Ruby_Versions/: 1_RubyPure.cpp  1_RubyPure.h  2_RubyGenetic.cpp  2_RubyGenetic.h  3_RubyGeneticOnePoint.cpp  3_RubyGeneticOnePoint.h  4_RubyGeneticOnePointPosNeg.cpp  4_RubyGeneticOnePointPosNeg.h  5_RubyGeneticOnePointPosNegInfinite.cpp  5_RubyGeneticOnePointPosNegInfinite.h
engrais_control/src/7_FuzzyController/: FuzzyController.cpp  FuzzyController.h
engrais_control/src/8_StateMachine/: StateMachine.cpp  StateMachine.h
engrais_control/src/9_WeightedModel/: WeightedModel.cpp  WeightedModel.h
engrais_control/src/Ruby_Versions/: 1_RubyPure.h  2_RubyGenetic.cpp  2_RubyGenetic.h  3_RubyGeneticOnePoint.cpp  3_RubyGeneticOnePoint.h  3_RubyGeneticPosNeg.cpp  3_RubyGeneticPosNeg.h
engrais_control/src/include/1_Point/: Point.h
engrais_control/src/include/2_WeightedPoint/: WeightedPoint.cpp  WeightedPoint.h
engrais_control/src/include/3_Utility/: Utility.cpp  Utility.h
engrais_control/src/include/4_Model/: Model.cpp  Model.h
engrais_control/src/robot_findlines_include/1_Pearl/: Pearl.cpp  Pearl.h
engrais_control/src/robot_findlines_include/1_Point/: Point.cpp  Point.h
engrais_control/src/robot_findlines_include/2_Ruby_Versions/: 1_RubyPure.cpp  1_RubyPure.h  2_RubyGenetic.cpp  2_RubyGenetic.h  3_RubyGeneticOnePoint.cpp  3_RubyGeneticOnePoint.h  4_RubyGeneticOnePointPosNeg.cpp  4_RubyGeneticOnePointPosNeg.h  5_RubyGeneticOnePointPosNegInfinite.cpp  5_RubyGeneticOnePointPosNegInfinite.h
engrais_control/src/robot_findlines_include/2_WeightedPoint/: WeightedPoint.h
engrais_control/src/robot_findlines_include/3_Utility/: Utility.cpp  Utility.h
engrais_control/src/robot_findlines_include/4_Model/: Model.cpp  Model.h
engrais_control/src/robot_findlines_include/5_Pearl/: Pearl.cpp  Pearl.h
engrais_control/src/robot_findlines_include/6_Ruby_Versions/: 1_RubyPure.cpp  1_RubyPure.h  2_RubyGenetic.cpp  2_RubyGenetic.h  3_RubyGeneticOnePoint.cpp  3_RubyGeneticOnePoint.h  4_RubyGeneticOnePointPosNeg.cpp  4_RubyGeneticOnePointPosNeg.h  5_RubyGeneticOnePointPosNegInfinite.cpp  5_RubyGeneticOnePointPosNegInfinite.h
engrais_control/src/robot_move_include/1_Control/: Control.h
engrais_control/src/robot_move_include/FuzzyController/: FuzzyController.cpp  FuzzyController.h
engrais_control/src/robot_move_include/fuzzylite-6.0/fuzzylite/: CTestTestfile.cmake
engrais_control/src/sensor_capture_include/1_VelodyneCapture/: VelodyneCapture.cpp  VelodyneCapture.h
engrais_control/tests/results_easy_angle0/: results_easy_angle0.txt
engrais_control/tests/results_hard_angle-20/: results_hard_angle-20.txt
engrais_control/tests/results_hard_angle0/: results_hard_angle0.txt
engrais_control/tests/results_hard_angle40/: results_hard_angle40.txt
engrais_description/: CMakeLists.txt  package.xml
engrais_description/launch/: rviz.launch
engrais_description/rviz/: engrais.rviz
engrais_description/urdf/: engrais.gazebo  engrais.xacro  engrais_control.yaml  macros.xacro  materials.xacro
engrais_gazebo/: CMakeLists.txt  package.xml  robot_get_pose.cpp
engrais_gazebo/launch/: engrais_complicated.launch  engrais_easy.launch  engrais_field.launch  engrais_model.launch  engrais_world.launch  rviz.launch
engrais_gazebo/models/: Makefile  README
engrais_gazebo/rviz/: engrais.rviz
engrais_gazebo/worlds/: Makefile  engrais.world  engrais.world.py  engrais.world.xacro  engrais2.world  engrais2.world.py  engrais3.world  engrais3.world.csv  engrais3.world.py  engrais4.world  engrais4.world.py  engrais_complicated.world  engrais_easy.world  getPose.py  plantsLocation.py
engrais_motors/: CMakeLists.txt  keep_motor_alive_node.cpp  motor_node.cpp  package.xml
engrais_motors/launch/: both_motors.launch  keep_motor_alive.launch  motor.launch
engrais_motors/src/: ezwheel_serial.cpp  ezwheel_serial.h
engrais_plugin/: CMakeLists.txt  package.xml
engrais_plugin/src/: cmd.cpp  robot_plugin.cpp  robot_plugin.h
robot_control/: CMakeLists.txt  package.xml
robot_control/src/: robot_control.cpp  robot_keyboard_control.cpp
robot_plugin/: CMakeLists.txt  Sending Array to ROS  cmd.cc  robot.world  robot_plugin.cc  to_run
scripts/: analysis.sh  install.sh  network.sh  resultAnalysis.py  simulate.sh  test.sh
(+29 files in other folders)
